# MLLM-Med-Eval

./: .gitignore  README.md  pyproject.toml
mmmbench/: constants.py  io.py  llm_rater.py  metric_llm.py  metric_nlp.py  metrics.py  plot.py
test/: model_based.py  model_free.py  print_pkl.py  progress_bar.py  run.py  test_metrics.py
