[project]
name = "MMMBench"
version = "0.1.0"
description = "MMMBench: A parallel processing wrapper for Pred V.S. GT evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cidereval",
    "dotenv>=0.9.9",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "rouge>=1.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
cidereval = { git = "https://github.com/Moenupa/cider.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
